# workout-maker

./: .pre-commit-config.yaml  Makefile  pyproject.toml
src/: state_last_trained.json
src/core/: models.py  state_last_trained.json  workout_maker.py
src/interface/: app.py
src/repository/: exercises.py  recovery.py
